--- a/index.html
+++ b/index.html
@@ -58,26 +58,58 @@
         <nav class="navigation">
             <a
                 href="#"
-                class="navigation-items__item"
+                class="navigation__item"
                 data-lang="navigation-items__item-1"
             >
                 Про нас
             </a>
             <a
                 href="#"
-                class="navigation-items__item"
+                class="navigation__item"
                 data-lang="navigation-items__item-2"
             >
                 Чому ми?
             </a>
             <a
                 href="#"
-                class="navigation-items__item"
+                class="navigation__item"
                 data-lang="navigation-items__item-3"
             >
                 Послуги
             </a>
         </nav>
+
+        <section class="slider">
+            <ul class="hover-slider-nav">
+                <li class="hover-slider-nav__item"></li>
+                <li class="hover-slider-nav__item"></li>
+                <li class="hover-slider-nav__item"></li>
+            </ul>
+
+            <ul class="hover-slider">
+                <li class="hover-slider__item">
+                    <img
+                        class="hover-slider__item-img"
+                        src="images/slide_1.jpg"
+                        alt="картинка"
+                    />
+                </li>
+                <li class="hover-slider__item">
+                    <img
+                        class="hover-slider__item-img"
+                        src="images/slide_2.jpg"
+                        alt="картинка"
+                    />
+                </li>
+                <li class="hover-slider__item">
+                    <img
+                        class="hover-slider__item-img"
+                        src="images/slide_3.jpg"
+                        alt="картинка"
+                    />
+                </li>
+            </ul>
+        </section>
     </body>
 
     <script src="js/localization.js"></script>
