--- a/index.html
+++ b/index.html
@@ -80,6 +80,35 @@
         </nav>
 
         <section class="slider">
+            <div class="hover-slider-buttons">
+                <button
+                    id="hover-slider-button-left"
+                    class="hover-slider-buttons__item"
+                >
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 320 512"
+                    >
+                        <path
+                            d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"
+                        />
+                    </svg>
+                </button>
+                <button
+                    id="hover-slider-button-right"
+                    class="hover-slider-buttons__item"
+                >
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 320 512"
+                    >
+                        <path
+                            d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z"
+                        />
+                    </svg>
+                </button>
+            </div>
+
             <ul class="hover-slider-nav">
                 <li class="hover-slider-nav__item"></li>
                 <li class="hover-slider-nav__item"></li>
@@ -88,6 +117,18 @@
 
             <ul class="hover-slider">
                 <li class="hover-slider__item">
+                    <div class="hover-slider__item-information">
+                        <h1 class="hover-slider__item-information-h1">
+                            В ПОШУКАХ РОБОТИ?
+                        </h1>
+                        <p class="hover-slider__item-information-p">
+                            Працюємо в багатьох регіонах Польщі
+                        </p>
+                        <button class="hover-slider__item-information-button">
+                            Отримати вакансії
+                        </button>
+                    </div>
+
                     <img
                         class="hover-slider__item-img"
                         src="images/slide_1.jpg"
@@ -95,16 +136,42 @@
                     />
                 </li>
                 <li class="hover-slider__item">
+                    <div class="hover-slider__item-information">
+                        <h1 class="hover-slider__item-information-h1">
+                            В ПОШУКАХ ПРАЦІВНИКІВ?
+                        </h1>
+                        <p class="hover-slider__item-information-p">
+                            Найпоширеніші вакансії: зварювальник, монтер,
+                            слюсар, маляр
+                        </p>
+                        <button class="hover-slider__item-information-button">
+                            Отримати вакансії
+                        </button>
+                    </div>
+
                     <img
                         class="hover-slider__item-img"
-                        src="images/slide_2.jpg"
+                        src="images/slide_3.jpg"
                         alt="картинка"
                     />
                 </li>
                 <li class="hover-slider__item">
+                    <div class="hover-slider__item-information">
+                        <h1 class="hover-slider__item-information-h1">
+                            ОФІЦІЙНЕ ПРАЦЕВЛАШТУВАННЯ
+                        </h1>
+                        <p class="hover-slider__item-information-p">
+                            Швидке і якісне оформлення документів для легального
+                            перебування і праці на території Польщі
+                        </p>
+                        <button class="hover-slider__item-information-button">
+                            Отримати вакансії
+                        </button>
+                    </div>
+
                     <img
                         class="hover-slider__item-img"
-                        src="images/slide_3.jpg"
+                        src="images/slide_2.jpg"
                         alt="картинка"
                     />
                 </li>
