--- a/index.html
+++ b/index.html
@@ -110,13 +110,16 @@
             <ul class="hover-slider">
                 <li class="hover-slider__item">
                     <div class="hover-slider__item-information">
-                        <h1 class="hover-slider__item-information-h1">
+                        <h1
+                            class="hover-slider__item-information-h1"
+                            data-lang="hover-slider__item-information-h1-1"
+                        >
                             В ПОШУКАХ РОБОТИ?
                         </h1>
                         <p class="hover-slider__item-information-p">
                             Працюємо в багатьох регіонах Польщі
                         </p>
-                        <button class="hover-slider__item-information-button">
+                        <button class="get-vacancy-button">
                             Отримати вакансії
                         </button>
                     </div>
@@ -129,14 +132,17 @@
                 </li>
                 <li class="hover-slider__item">
                     <div class="hover-slider__item-information">
-                        <h1 class="hover-slider__item-information-h1">
+                        <h1
+                            class="hover-slider__item-information-h1"
+                            data-lang="hover-slider__item-information-h1-2"
+                        >
                             В ПОШУКАХ ПРАЦІВНИКІВ?
                         </h1>
                         <p class="hover-slider__item-information-p">
                             Найпоширеніші вакансії: зварювальник, монтер,
                             слюсар, маляр
                         </p>
-                        <button class="hover-slider__item-information-button">
+                        <button class="get-vacancy-button">
                             Отримати вакансії
                         </button>
                     </div>
@@ -149,14 +155,17 @@
                 </li>
                 <li class="hover-slider__item">
                     <div class="hover-slider__item-information">
-                        <h1 class="hover-slider__item-information-h1">
+                        <h1
+                            class="hover-slider__item-information-h1"
+                            data-lang="hover-slider__item-information-h1-3"
+                        >
                             ОФІЦІЙНЕ ПРАЦЕВЛАШТУВАННЯ
                         </h1>
                         <p class="hover-slider__item-information-p">
                             Швидке і якісне оформлення документів для легального
                             перебування і праці на території Польщі
                         </p>
-                        <button class="hover-slider__item-information-button">
+                        <button class="get-vacancy-button">
                             Отримати вакансії
                         </button>
                     </div>
