--- a/index.html
+++ b/index.html
@@ -116,10 +116,16 @@
                         >
                             В ПОШУКАХ РОБОТИ?
                         </h1>
-                        <p class="hover-slider__item-information-p">
+                        <p
+                            class="hover-slider__item-information-p"
+                            data-lang="hover-slider__item-information-p-1"
+                        >
                             Працюємо в багатьох регіонах Польщі
                         </p>
-                        <button class="get-vacancy-button">
+                        <button
+                            class="get-vacancy-button"
+                            data-lang="get-vacancy-button"
+                        >
                             Отримати вакансії
                         </button>
                     </div>
@@ -138,11 +144,17 @@
                         >
                             В ПОШУКАХ ПРАЦІВНИКІВ?
                         </h1>
-                        <p class="hover-slider__item-information-p">
+                        <p
+                            class="hover-slider__item-information-p"
+                            data-lang="hover-slider__item-information-p-2"
+                        >
                             Найпоширеніші вакансії: зварювальник, монтер,
                             слюсар, маляр
                         </p>
-                        <button class="get-vacancy-button">
+                        <button
+                            class="get-vacancy-button"
+                            data-lang="get-vacancy-button"
+                        >
                             Отримати вакансії
                         </button>
                     </div>
@@ -161,11 +173,17 @@
                         >
                             ОФІЦІЙНЕ ПРАЦЕВЛАШТУВАННЯ
                         </h1>
-                        <p class="hover-slider__item-information-p">
+                        <p
+                            class="hover-slider__item-information-p"
+                            data-lang="hover-slider__item-information-p-3"
+                        >
                             Швидке і якісне оформлення документів для легального
                             перебування і праці на території Польщі
                         </p>
-                        <button class="get-vacancy-button">
+                        <button
+                            class="get-vacancy-button"
+                            data-lang="get-vacancy-button"
+                        >
                             Отримати вакансії
                         </button>
                     </div>
@@ -178,6 +196,8 @@
                 </li>
             </ul>
         </section>
+
+        <section class="about-us"></section>
     </body>
 
     <script src="js/localization.js"></script>
