--- a/index.html
+++ b/index.html
@@ -197,7 +197,35 @@
             </ul>
         </section>
 
-        <section class="about-us"></section>
+        <section class="about-us">
+            <div class="container">
+                <div class="about-us-block">
+                    <div class="about-us-block__info">
+                        <h2 class="about-us-block__info-h2 h2">Про нас</h2>
+                        <p class="about-us-block__info-p">
+                            Фірма працює з 2021 по всій території Польщі,
+                            займаємося працевлаштуванням людей з таких країн як
+                            Україна, Білорусь, Індонезія, Молдова, Індія,
+                            Філіппіни, країн Африки на спеціальності:
+                            зварювальник, слюсар, монтер, маляр, шліфувальник.
+                            До виконання довірених робіт, ми підходимо з
+                            належною відповідальністю та надійністю. В нас
+                            працюють тільки досвідчені фахівці з необхідною
+                            кваліфікацією. Наші знання та досвід дозволяють нам
+                            надавати послуги відповідно до законодавства та
+                            чинних норм і стандартів безпеки. Ми дбаємо про те,
+                            щоб забезпечити наших працівників комфортом і
+                            безпекою на протязі всього періоду співпраці.
+                        </p>
+                    </div>
+                    <img
+                        src="images/about-us.png"
+                        class="about-us-block__img"
+                        draggable="false"
+                    />
+                </div>
+            </div>
+        </section>
     </body>
 
     <script src="js/localization.js"></script>
