--- a/index.html
+++ b/index.html
@@ -197,11 +197,11 @@
             </ul>
         </section>
 
-        <section class="about-us">
+        <section class="about-us sections">
             <div class="container">
                 <div class="about-us-block">
                     <div class="about-us-block__info">
-                        <h2 class="about-us-block__info-h2 h2">Про нас</h2>
+                        <h4 class="about-us-block__info-h2">Про нас</h4>
                         <p class="about-us-block__info-p">
                             Фірма працює з 2021 по всій території Польщі,
                             займаємося працевлаштуванням людей з таких країн як
@@ -225,6 +225,68 @@
                     />
                 </div>
             </div>
+        </section>
+
+        <section class="achievments sections">
+            <h2 class="achievments__h2">Наші досягнення</h2>
+            <ul class="achievments-list">
+                <li class="achievments-list__item">
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 448 512"
+                    >
+                        <path
+                            d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
+                        />
+                    </svg>
+                    <p class="achievments-list__item-text">
+                        На протязі часу роботи фірми ми працевлаштували понад
+                        1000 осіб
+                    </p>
+                </li>
+                <li class="achievments-list__item">
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 448 512"
+                    >
+                        <path
+                            d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
+                        />
+                    </svg>
+                    <p class="achievments-list__item-text">
+                        Швидке і якісне оформлення документів для легального
+                        перебування і праці на території Польщі
+                    </p>
+                </li>
+                <li class="achievments-list__item">
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 448 512"
+                    >
+                        <path
+                            d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
+                        />
+                    </svg>
+                    <p class="achievments-list__item-text">
+                        Говоримо на українській,польській, англійській,
+                        російській мовах
+                    </p>
+                </li>
+                <li class="achievments-list__item">
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 448 512"
+                    >
+                        <path
+                            d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
+                        />
+                    </svg>
+                    <p class="achievments-list__item-text">
+                        Своєчасні виплати заробітної плати та повний пакет
+                        медичного страхування
+                    </p>
+                </li>
+            </ul>
         </section>
     </body>
 
