--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <div class="container">
                 <div class="about-us-block">
                     <div class="about-us-block__info">
-                        <h4 class="about-us-block__info-h2">Про нас</h4>
+                        <h2 class="about-us-block__info-h2">Про нас</h2>
                         <p class="about-us-block__info-p">
                             Фірма працює з 2021 по всій території Польщі,
                             займаємося працевлаштуванням людей з таких країн як
@@ -287,6 +287,110 @@
                     </p>
                 </li>
             </ul>
+        </section>
+
+        <section class="certificats sections">
+            <div class="container">
+                <img
+                    src="images/cert2.png"
+                    alt="Сертифікат 1"
+                    class="certificats__img active"
+                />
+                <img
+                    src="images/cert1.png"
+                    alt="Сертифікат 2"
+                    class="certificats__img"
+                />
+            </div>
+            <span class="certificats-modal modal"
+                ><img
+                    class="certificats-modal__img modal__inner"
+                    src=""
+                    alt="Сертифікат в зумі"
+                />
+                <svg class="modal__close" viewBox="0 0 23 23" fill="none">
+                    <path
+                        d="M1.41421 -0.000151038L0 1.41406L21.2132 22.6273L22.6274 21.2131L1.41421 -0.000151038Z"
+                    ></path>
+                    <path
+                        d="M22.6291 1.41421L21.2148 0L0.00164068 21.2132L1.41585 22.6274L22.6291 1.41421Z"
+                    ></path>
+                </svg>
+            </span>
+        </section>
+
+        <section class="our-services sections">
+            <div class="container">
+                <h2 class="our-services__h2">Наші послуги</h2>
+                <ul class="our-services-cards">
+                    <li class="our-services-cards__item">
+                        <h4 class="our-services-cards__item-h4">Легалізація</h4>
+                        <p class="our-services-cards__item-p">
+                            Ми надаємо всі необхідні документи, пов'язані з
+                            перебуванням і легальною роботою в Польщі
+                        </p>
+                        <span class="our-services-cards__item-button"
+                            >Детальніше</span
+                        >
+                    </li>
+                    <li class="our-services-cards__item">
+                        <h4 class="our-services-cards__item-h4">Рекрутація</h4>
+                        <p class="our-services-cards__item-p">
+                            Робота в Польщі для іноземців. Якщо ви зацікавлені
+                            легальною працею в Польщі, пропонуємо вам зв'язатися
+                            з нами. Процес рекрутингу передбачає поряд із
+                            залученням, відбором і співбесідою також отримання
+                            додаткової інформації про кандидатів, підписання
+                            контракту й адаптацію нових працівників
+                        </p>
+                        <span class="our-services-cards__item-button"
+                            >Детальніше</span
+                        >
+                    </li>
+                    <li class="our-services-cards__item">
+                        <h4 class="our-services-cards__item-h4">
+                            Кваліфікована підготовка спеціалістів до роботи
+                        </h4>
+                        <p class="our-services-cards__item-p">
+                            Якщо у Вас не має досвіду в зварювальних роботах -
+                            це не проблема. Запишіться до нас на навчання
+                            зварювальника, швидко і якісно опануєте нову
+                            спеціальність
+                        </p>
+                        <span class="our-services-cards__item-button"
+                            >Детальніше</span
+                        >
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <section class="countries sections">
+            <h2 class="countries__h2">Країни-партнери</h2>
+            <div class="container">
+                <div class="countries-list">
+                    <img src="images/pl.png" alt="ua" /><img
+                        src="images/ua.png"
+                        alt="pl"
+                    /><img src="images/br.png" alt="br" /><img
+                        src="images/eu.png"
+                        alt="eu"
+                    /><img src="images/in.png" alt="in" /><img
+                        src="images/ml.png"
+                        alt="ml"
+                    /><img src="images/ph.png" alt="ph" />
+                </div>
+            </div>
+        </section>
+
+        <section class="forma sections">
+            <h1 class="forma__h1">Отримуйте найактуальніші вакансії!</h1>
+            <p class="forma__p">
+                Заповніть форму і ми одразу з Вами зв'яжемося!
+            </p>
+            <button class="get-vacancy-button" data-lang="get-vacancy-button">
+                Отримати вакансії!
+            </button>
         </section>
     </body>
 
