--- a/index.html
+++ b/index.html
@@ -57,21 +57,21 @@
 
         <nav class="navigation">
             <a
-                href="#"
+                href="#about-us"
                 class="navigation__item"
                 data-lang="navigation-items__item-1"
             >
                 Про нас
             </a>
             <a
-                href="#"
+                href="#achievments"
                 class="navigation__item"
                 data-lang="navigation-items__item-2"
             >
                 Чому ми?
             </a>
             <a
-                href="#"
+                href="#our-services"
                 class="navigation__item"
                 data-lang="navigation-items__item-3"
             >
@@ -197,12 +197,20 @@
             </ul>
         </section>
 
-        <section class="about-us sections">
+        <section class="about-us sections" id="about-us">
             <div class="container">
                 <div class="about-us-block">
                     <div class="about-us-block__info">
-                        <h2 class="about-us-block__info-h2">Про нас</h2>
-                        <p class="about-us-block__info-p">
+                        <h2
+                            class="about-us-block__info-h2"
+                            data-lang="about-us-block__info-h2"
+                        >
+                            Про нас
+                        </h2>
+                        <p
+                            class="about-us-block__info-p"
+                            data-lang="about-us-block__info-p"
+                        >
                             Фірма працює з 2021 по всій території Польщі,
                             займаємося працевлаштуванням людей з таких країн як
                             Україна, Білорусь, Індонезія, Молдова, Індія,
@@ -227,8 +235,10 @@
             </div>
         </section>
 
-        <section class="achievments sections">
-            <h2 class="achievments__h2">Наші досягнення</h2>
+        <section class="achievments sections" id="achievments">
+            <h2 class="achievments__h2" data-lang="achievments__h2">
+                Наші досягнення
+            </h2>
             <ul class="achievments-list">
                 <li class="achievments-list__item">
                     <svg
@@ -239,7 +249,10 @@
                             d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
                         />
                     </svg>
-                    <p class="achievments-list__item-text">
+                    <p
+                        class="achievments-list__item-text"
+                        data-lang="achievments-list__item-text-1"
+                    >
                         На протязі часу роботи фірми ми працевлаштували понад
                         1000 осіб
                     </p>
@@ -253,7 +266,10 @@
                             d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
                         />
                     </svg>
-                    <p class="achievments-list__item-text">
+                    <p
+                        class="achievments-list__item-text"
+                        data-lang="achievments-list__item-text-2"
+                    >
                         Швидке і якісне оформлення документів для легального
                         перебування і праці на території Польщі
                     </p>
@@ -267,7 +283,10 @@
                             d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
                         />
                     </svg>
-                    <p class="achievments-list__item-text">
+                    <p
+                        class="achievments-list__item-text"
+                        data-lang="achievments-list__item-text-3"
+                    >
                         Говоримо на українській,польській, англійській,
                         російській мовах
                     </p>
@@ -281,7 +300,10 @@
                             d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
                         />
                     </svg>
-                    <p class="achievments-list__item-text">
+                    <p
+                        class="achievments-list__item-text"
+                        data-lang="achievments-list__item-text-4"
+                    >
                         Своєчасні виплати заробітної плати та повний пакет
                         медичного страхування
                     </p>
@@ -319,7 +341,7 @@
             </span>
         </section>
 
-        <section class="our-services sections">
+        <section class="our-services sections" id="our-services">
             <div class="container">
                 <h2 class="our-services__h2">Наші послуги</h2>
                 <ul class="our-services-cards">
@@ -383,15 +405,39 @@
             </div>
         </section>
 
-        <section class="forma sections">
-            <h1 class="forma__h1">Отримуйте найактуальніші вакансії!</h1>
-            <p class="forma__p">
-                Заповніть форму і ми одразу з Вами зв'яжемося!
-            </p>
-            <button class="get-vacancy-button" data-lang="get-vacancy-button">
-                Отримати вакансії!
-            </button>
+        <section class="forma">
+            <span class="forma__overlay"></span>
+            <div class="forma-info">
+                <h1 class="forma-info__h1">
+                    Отримуйте найактуальніші вакансії!
+                </h1>
+                <p class="forma-info__p">
+                    Заповніть форму і ми одразу з Вами зв'яжемося!
+                </p>
+                <svg
+                    role="presentation"
+                    class="forma-info__arrow"
+                    fill="none"
+                    viewBox="0 0 80 180"
+                >
+                    <path
+                        d="M54.1 108c-.5 0-.9-.2-1.2-.6-.5-.7-.3-1.6.4-2.1 1.5-1 9.5-5.5 14.6-8.3-17.4-.5-31.3-7.3-41.3-20C9.9 55.7 9.5 24.2 14.2 3.7c.2-.8 1-1.3 1.8-1.1.8.2 1.3 1 1.1 1.8-4.6 19.9-4.2 50.3 11.8 70.8 9.5 12.2 23 18.6 39.9 18.9h.3l-3.2-4c-1.4-1.7-2.7-3.3-4.1-5.1-.7-.9-1.5-1.9-2.3-2.9-.5-.6-.4-1.6.2-2.1.6-.5 1.6-.4 2.1.2 0 0 0 .1.1.1l6.4 7.9c.5.6.9 1.1 1.4 1.7 1.5 1.8 3.1 3.6 4.3 5.5 0 .1.1.1.1.2.1.2.1.3.2.5v.3c0 .2 0 .3-.1.5 0 .1-.1.1-.1.2-.1.2-.2.3-.3.4-.1.1-.2.1-.3.2 0 0-.1 0-.2.1-.9.4-16 8.6-18.2 10.1-.4 0-.7.1-1 .1z"
+                    ></path>
+                </svg>
+                <button
+                    class="get-vacancy-button"
+                    data-lang="get-vacancy-button"
+                >
+                    Отримати вакансії!
+                </button>
+            </div>
         </section>
+
+        <footer class="footer sections">
+            <div class="container">
+                <h4 class="footer__h4">© All Rights Reserved. MST Profi.</h4>
+            </div>
+        </footer>
     </body>
 
     <script src="js/localization.js"></script>
