--- a/index.html
+++ b/index.html
@@ -343,7 +343,9 @@
 
         <section class="our-services sections" id="our-services">
             <div class="container">
-                <h2 class="our-services__h2">Наші послуги</h2>
+                <h2 class="our-services__h2" data-lang="our-services__h2">
+                    Наші послуги
+                </h2>
                 <ul class="our-services-cards">
                     <li class="our-services-cards__item">
                         <h4 class="our-services-cards__item-h4">Легалізація</h4>
