--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             </ul>
         </section>
 
-        <section class="about-us sections" id="about-us">
+        <!-- <section class="about-us sections" id="about-us">
             <div class="container">
                 <div class="about-us-block">
                     <div class="about-us-block__info">
@@ -439,7 +439,7 @@
             <div class="container">
                 <h4 class="footer__h4">© All Rights Reserved. MST Profi.</h4>
             </div>
-        </footer>
+        </footer> -->
     </body>
 
     <script src="js/localization.js"></script>
