--- a/index.html
+++ b/index.html
@@ -22,71 +22,55 @@
                         class="header-logo__image"
                     />
 
-                    <p class="header-logo__text">MST <span>PROFI</span></p>
+                    <h1 class="header-logo__text">
+                        MST
+                        <h1 class="header-logo__text-span">PROFI</h1>
+                    </h1>
                 </a>
 
-                <div class="header-block">
-                    <ul class="header-contacts">
-                        <a
-                            href="tel:+48790799270"
-                            class="header-contacts__item"
+                <ul class="header-contacts">
+                    <a href="tel:+48790799270" class="header-contacts__item">
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 512 512"
                         >
-                            <svg
-                                xmlns="http://www.w3.org/2000/svg"
-                                viewBox="0 0 512 512"
-                            >
-                                <path
-                                    d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"
-                                />
-                            </svg>
-                            <span>+48 790 799 270</span>
-                        </a>
+                            <path
+                                d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"
+                            />
+                        </svg>
+                        <span>+48 790 799 270</span>
+                    </a>
 
-                        <a
-                            href="tel:+48531584303"
-                            class="header-contacts__item"
+                    <a href="tel:+48531584303" class="header-contacts__item">
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 512 512"
                         >
-                            <svg
-                                xmlns="http://www.w3.org/2000/svg"
-                                viewBox="0 0 512 512"
-                            >
-                                <path
-                                    d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"
-                                />
-                            </svg>
-                            <span>+48 531 584 303</span>
-                        </a>
-                    </ul>
-
-                    <div class="header-language">
-                        <div class="header-language__main">
-                            <span class="header-language__main-selected"
-                                >PL</span
-                            >
-                            <svg
-                                xmlns="http://www.w3.org/2000/svg"
-                                viewBox="0 0 512 512"
-                            >
-                                <path
-                                    d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
-                                />
-                            </svg>
-                        </div>
-                        <ul class="header-language__items">
-                            <li class="header-language__item" data-btn="pl">
-                                PL
-                            </li>
-                            <li class="header-language__item" data-btn="en">
-                                EN
-                            </li>
-                            <li class="header-language__item" data-btn="ua">
-                                UA
-                            </li>
-                            <li class="header-language__item" data-btn="ru">
-                                RU
-                            </li>
-                        </ul>
+                            <path
+                                d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"
+                            />
+                        </svg>
+                        <span>+48 531 584 303</span>
+                    </a>
+                </ul>
+                <div class="header-language">
+                    <div class="header-language__main">
+                        <span class="header-language__main-selected">PL</span>
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 512 512"
+                        >
+                            <path
+                                d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
+                            />
+                        </svg>
                     </div>
+                    <ul class="header-language__items">
+                        <li class="header-language__item" data-btn="pl">PL</li>
+                        <li class="header-language__item" data-btn="en">EN</li>
+                        <li class="header-language__item" data-btn="ua">UA</li>
+                        <li class="header-language__item" data-btn="ru">RU</li>
+                    </ul>
                 </div>
             </div>
         </header>
