--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
                         <li class="header-language__item" data-btn="ru">RU</li>
                     </ul>
                 </div>
+
+                <div class="header__burger"><span></span></div>
             </div>
         </header>
 
@@ -97,6 +99,26 @@
             >
                 Послуги
             </a>
+
+            <div class="header-language">
+                <div class="header-language__main">
+                    <span class="header-language__main-selected">PL</span>
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 512 512"
+                    >
+                        <path
+                            d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
+                        />
+                    </svg>
+                </div>
+                <ul class="header-language__items">
+                    <li class="header-language__item" data-btn="pl">PL</li>
+                    <li class="header-language__item" data-btn="en">EN</li>
+                    <li class="header-language__item" data-btn="ua">UA</li>
+                    <li class="header-language__item" data-btn="ru">RU</li>
+                </ul>
+            </div>
         </nav>
 
         <section class="slider">
