--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
             </ul>
         </section>
 
-        <section class="certificats sections">
+        <!-- <section class="certificats sections">
             <div class="container">
                 <img
                     src="images/cert2.png"
@@ -482,7 +482,7 @@
             <div class="container">
                 <h4 class="footer__h4">© All Rights Reserved. MST Profi.</h4>
             </div>
-        </footer>
+        </footer> -->
     </body>
 
     <script src="js/localization.js"></script>
