--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
             </ul>
         </section>
 
-        <!-- <section class="certificats sections">
+        <section class="certificats sections">
             <div class="container">
                 <img
                     src="images/cert2.png"
@@ -383,7 +383,7 @@
                 </svg>
             </span>
         </section>
-
+        <!-- 
         <section class="our-services sections" id="our-services">
             <div class="container">
                 <h2 class="our-services__h2" data-lang="our-services__h2">
